link to new resp styles;
Signed-off-by: Ernest Brugger <erbrugger@gmail.com>

--- a/letter.html
+++ b/letter.html
@@ -7,6 +7,12 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	
+	<!-- new RF resp styles -->
+	<link rel="stylesheet" type="text/css" href="css/main_resp.css?111239839575">
+	<link rel="stylesheet" type="text/css" href="css/add_resp.css?2054301751">
+	
+	
+	<!-- orig RF styles -->
 	<link rel="stylesheet" type="text/css" href="http://im.rusfond.ru/css/main.css?1844514440">
 	<link rel="stylesheet" type="text/css" href="http://im.rusfond.ru/add_css/add.css?1844514440">
 
