--- a/letter.html
+++ b/letter.html
@@ -1706,7 +1706,9 @@ style="border:0;" height="1" width="1" alt="Рейтинг@Mail.ru" /&gt;&lt;/a&
 </div>
 <!-- //FOOTER -->
 
-<a id="toTop" style="right: 20px; display: block;"><img src="http://im.rusfond.ru/pics/site/arrow-top.png" alt="« align=»absmiddle" border="0"></a>
+<a id="toTop" style="right: 20px; display: block;">
+<!--<img src="http://im.rusfond.ru/pics/site/arrow-top.png" alt="« align=»absmiddle" border="0"></a>-->
+<img src="images/toTop_1.svg">
 <script type="text/javascript"><hc id="hc_select_index265" class="hc_select_index"></hc>// <![CDATA[
     $(function () { init_arrowtop(); $("#toTop").scrollToTop(); });
 // ]]></script>
