add fallback menu styles (WIP);
Signed-off-by: Ernest Brugger <erbrugger@gmail.com>

--- a/letter.html
+++ b/letter.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="css/main_resp.css?111239839575">
 	<link rel="stylesheet" type="text/css" href="css/add_resp.css?2054301751">
 	
+	<!-- fallback menu styles -->
+	<link rel="stylesheet" type="text/css" href="css/fallback_menu.css?205430175145">
+	
 	<!--[if lt IE 9]>
 	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js?5989082344"></script>
 	    <link rel="stylesheet" href="css/ie.css">
