fallback (side) menu cont;
Signed-off-by: Ernest Brugger <erbrugger@gmail.com>

--- a/letter.html
+++ b/letter.html
@@ -1541,10 +1541,15 @@ style="border:0;" height="1" width="1" alt="Рейтинг@Mail.ru" /&gt;&lt;/a&
 <div>
 
 	<!-- LEFTCOLUMN -->
-    
-
+   		
 	<div class="leftcolumn">
-		<ul class="kids base">
+	
+<!-- side menu -->
+		<h1>Menu</h1>
+		<a href="#" id="navicon" class="closed">&#9776;</a>
+<!-- // side menu -->
+	
+		<ul id="fallback-nav" class="kids base">
 
             <li class="odd l1"><a href="/letter/1/8108"><hc id="hc_select_index207" class="hc_select_index"></hc>Вера Созонтова</a></li>
 
@@ -1610,6 +1615,7 @@ style="border:0;" height="1" width="1" alt="Рейтинг@Mail.ru" /&gt;&lt;/a&
             <li class="odd l1"><a href="/letter/1/7941"><hc id="hc_select_index236" class="hc_select_index"></hc>Снежана Скочина</a></li>
 
         </ul>
+
 
 	</div>
 
